2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version for X11R7 release.

2005-12-20  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Bug #5359: Fix a segfault (Mark Kettenis)

	* fb/fbpict.c:
	Fix an fb regression on A8 pictures.  (Fredrik Höglund)

2005-12-19  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/doc/man/xorg.conf.man.pre:
	Bug #5116: Refer DRI section details to dri.fd.o.

2005-12-19  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/doc/devel/exa-driver.txt:
	* hw/xfree86/getconfig/cfg.man.pre:
	* hw/xfree86/getconfig/getconfig.man.pre:
	Fix typos.

2005-12-14  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/scanpci/pci.ids: 
	* hw/xfree86/scanpci/xf86PciStdIds.h:
	Update to 2005-12-14 snapshot from pciids.sf.net

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.
	Update release string to 6.99.99.904.

2005-12-14  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Globals.c:
	* hw/xfree86/common/xf86Init.c:
	* hw/xfree86/common/xf86Priv.h:
	* hw/xfree86/os-support/linux/lnx_apm.c:
	Bug #4718: Command line flag to disable ACPI.

2005-12-13  Adam Jackson  <ajax@freedesktop.org>

	* Xext/Makefile.am:
	Spell it XINERAMA_SRCS, not PANORAMIX_SRCS.

	* GL/mesa/X/Makefile.am:
	Build libglx correctly when not building the Xorg DDX.

2005-12-12  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/os-support/solaris/sun_kbdEv.c: 
	Remove unnecessary include of dgaproc.h that broke Solaris builds.

2005-12-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Xext/Makefile.am: 
	Bugzilla #4715 <https://bugs.freedesktop.org/show_bug.cgi?id=4715>
	Files in xserver/xorg/Xext not included in tarball after make dist

2005-12-09  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/xf8_32wid/Makefile.am: